fix issue of text overflowing not being show in return call page empty msg text

--- a/scss/return-call.scss
+++ b/scss/return-call.scss
@@ -73,8 +73,17 @@
     }
   }
   .empty-message {
-    font-weight: bold;
+    a {
+      font-weight: bold;
+    }
     padding: 15px;
+  }
+  .item {
+    .no-ellipsis {
+      overflow: hidden;
+      text-overflow: inherit;
+      white-space: normal;
+    }
   }
 }
 
